--- a/BotwShopDataUtil/BotwShopDataUtil.csproj
+++ b/BotwShopDataUtil/BotwShopDataUtil.csproj
@@ -5,14 +5,14 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AampLibrary" Version="1.0.10" />
     <PackageReference Include="BymlLibrary" Version="2.1.11" />
-    <PackageReference Include="CsYaz0" Version="1.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="SarcLibrary" Version="3.1.2" />
+    <PackageReference Include="SarcLibrary" Version="3.1.3" />
   </ItemGroup>
 
 </Project>
